examples/test/testpolicy5484.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5484
  namespace: namespace79
spec:
  podSelector:
    matchLabels:
      key30: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value45
          key26: value45
          key43: value11
      podSelector:
        matchLabels:
          key5: value26
          key39: value32
          key30: value42
